--- a/res/color/nav_drawer_colors.xml
+++ b/res/color/nav_drawer_colors.xml
@@ -4,5 +4,5 @@
     <item android:color="@android:color/white" android:state_selected="true" />
     <item android:color="@android:color/white" android:state_pressed="true" />
     <item android:color="@android:color/white" android:state_focused="true" />
-    <item android:color="@color/death_grey" />
+    <item android:color="@color/secondary_grey" />
 </selector>
