--- a/res/drawable/inactive_button.xml
+++ b/res/drawable/inactive_button.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle"  >
-            <corners android:radius="@dimen/radius_eight" />
+            <corners android:radius="@dimen/four_dp" />
             <solid android:color="@color/semitrans_green"/>
         </shape>
 
