--- a/res/drawable/rounds_back.xml
+++ b/res/drawable/rounds_back.xml
@@ -4,7 +4,7 @@
     <item>
         <shape android:shape="rectangle"  >
             <corners android:topRightRadius="20dp" android:bottomRightRadius="20dp" />
-            <solid android:color="@color/drawer_grey"/>
+            <solid android:color="@color/secondary_grey"/>
             <size android:height="64dp"/>
         </shape>
     </item>
