--- a/res/drawable/text_on_map_back.xml
+++ b/res/drawable/text_on_map_back.xml
@@ -4,9 +4,9 @@
 
     <item >
         <shape android:shape="rectangle"  >
-            <corners android:radius="@dimen/four" />
+            <corners android:radius="@dimen/four_dp" />
             <stroke android:width="1dip" android:color="@color/white_back" />
-            <solid android:color="@color/death_grey"/>
+            <solid android:color="@color/secondary_grey"/>
             <!--<gradient android:angle="-90" android:startColor="@color/interval_green" android:endColor="@color/interval_green_pressed" />-->
         </shape>
     </item>
