--- a/res/layout/bottom_buttons.xml
+++ b/res/layout/bottom_buttons.xml
@@ -6,7 +6,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
 
-android:background="@color/drawer_black"
+android:background="@color/primary_grey"
 
 
        >
