--- a/res/layout/custom_plans_spinner_item.xml
+++ b/res/layout/custom_plans_spinner_item.xml
@@ -13,7 +13,7 @@
 
     <TextView android:textStyle="bold" android:layout_toRightOf="@+id/planIconSpinner" android:layout_centerVertical="true" android:id="@+id/planDescriptionSpinner" android:textColor="@color/white_back"  android:layout_width="wrap_content" android:layout_height="wrap_content" />
 
-    <TextView  android:layout_alignParentRight="true" android:layout_centerVertical="true"   android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select" android:textColor="@color/secondary_txt" android:layout_marginRight="@dimen/four"/>
+    <TextView  android:layout_alignParentRight="true" android:layout_centerVertical="true"   android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select" android:textColor="@color/secondary_grey" android:layout_marginRight="@dimen/four_dp"/>
 
 
 </RelativeLayout>
