--- a/res/layout/frg_plans.xml
+++ b/res/layout/frg_plans.xml
@@ -4,7 +4,7 @@
               android:id="@+id/plansFlipper"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:background="@color/drawer_black"
+              android:background="@color/primary_grey"
               android:layout_height="match_parent"
        >
 
@@ -37,7 +37,6 @@
             android:layout_margin="@dimen/margin10">
 
         <com.kostas.custom.NumberPickerKostas
-
                 android:layout_alignParentTop="true"
                 app:minValue="100"
                 app:maxValue="5000"
@@ -52,7 +51,6 @@
         </com.kostas.custom.NumberPickerKostas>
 
         <com.kostas.custom.NumberPickerKostas
-
                 android:layout_below="@+id/planIntervalDistancePicker"
                 app:minValue="10"
                 app:maxValue="300"
@@ -67,7 +65,6 @@
         </com.kostas.custom.NumberPickerKostas>
 
         <com.kostas.custom.NumberPickerKostas
-
                 android:layout_marginBottom="@dimen/eight"
                 android:layout_below="@+id/planIntervalTimePicker"
                 app:minValue="10"
@@ -82,7 +79,6 @@
         </com.kostas.custom.NumberPickerKostas>
 
         <com.kostas.custom.NumberPickerKostas
-
                 android:layout_marginBottom="@dimen/eight"
                 android:layout_below="@+id/planIntervalStartRestPicker"
                 app:minValue="0"
@@ -96,12 +92,11 @@
                 android:layout_height="@dimen/standard_view_height">
         </com.kostas.custom.NumberPickerKostas>
 
-
         <EditText
-                  android:textColorHint="@color/circle_grey"
+                  android:textColorHint="@android:color/darker_gray"
                   android:singleLine="true"
                   android:ellipsize="end"
-                  android:textColor="@color/drawer_black"
+                  android:textColor="@color/primary_grey"
                   android:background="@drawable/edit_text_back"
                   android:id="@+id/planNewDescription"
                   android:layout_below="@+id/planIntervalRoundsPicker"
@@ -114,7 +109,7 @@
                       android:layout_alignParentBottom="true">
         <Button
 
-                android:layout_width="0dp"
+                android:layout_width="@dimen/zero"
                 android:layout_weight="1"
                 android:layout_marginRight="@dimen/eight"
                 android:layout_marginEnd="@dimen/eight"
@@ -129,7 +124,7 @@
                 />
 
         <Button
-                android:layout_width="0dp"
+                android:layout_width="@dimen/zero"
                 android:layout_weight="1"
                 android:layout_height="@dimen/standard_view_height"
                 android:text="@string/save_plan"
