--- a/res/layout/group_header.xml
+++ b/res/layout/group_header.xml
@@ -1,26 +1,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="50dp"
-              android:background="@color/drawer_grey"
+              android:layout_width="wrap_content"
+              android:layout_height="@dimen/standard_view_height"
+              android:background="@color/secondary_grey"
               android:focusable="false"
               android:orientation="vertical"
               android:paddingLeft="@dimen/eight"
               tools:context=".MainActivity" >
 
-    <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="49dp"-->
-            <!--android:gravity="center_vertical">-->
-
         <TextView
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
-                android:layout_height="49dp"
+                android:layout_height="@dimen/standard_view_height"
                 android:textColor="@color/white_back"
                android:gravity="center_vertical"
                 android:textSize="14sp"
                 android:textStyle="bold" />
     </LinearLayout>
 
-<!--</LinearLayout>-->
