--- a/res/layout/list_plan_row.xml
+++ b/res/layout/list_plan_row.xml
@@ -14,7 +14,7 @@
     <TextView android:textStyle="bold" android:layout_toRightOf="@+id/planIcon" android:id="@+id/planDescription" android:textColor="@color/white_back"  android:layout_width="wrap_content" android:layout_height="wrap_content" />
     <TextView android:textStyle="italic" android:layout_toRightOf="@+id/planIcon" android:layout_below="@+id/planDescription" android:id="@+id/planInfo" android:textColor="@color/white_back" android:layout_width="wrap_content" android:layout_height="wrap_content" />
 
-    <TextView  android:layout_alignParentRight="true" android:layout_centerVertical="true" android:text="Hold to delete"  android:layout_width="wrap_content" android:layout_height="wrap_content"  android:layout_marginRight="@dimen/four" android:textStyle="italic"/>
+    <TextView  android:layout_alignParentRight="true" android:layout_centerVertical="true" android:text="Hold to delete"  android:layout_width="wrap_content" android:layout_height="wrap_content"  android:layout_marginRight="@dimen/four_dp" android:textStyle="italic"/>
 
 
 </RelativeLayout>
