--- a/res/layout/list_running_row.xml
+++ b/res/layout/list_running_row.xml
@@ -2,28 +2,31 @@
 
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent"
-                android:layout_height="wrap_content" android:background="@drawable/grey_gradient_running"  android:padding="10dp" android:minHeight="@dimen/standard_view_height"
+                android:layout_height="wrap_content" android:background="@drawable/grey_no_gradient_interval"  android:padding="10dp" android:minHeight="@dimen/standard_view_height"
         >
 
+    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
+               android:layout_centerVertical="true" android:layout_alignParentLeft="true" android:layout_marginRight="@dimen/eight"
+               android:src="@drawable/interval_50" android:id="@+id/rowIcon"/>
 
 
 
-    <LinearLayout android:layout_alignParentLeft="true" android:layout_marginLeft="@dimen/eight"  android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true">
-        <TextView android:id="@+id/runningDescription" android:textColor="@color/interval_green" android:layout_centerVertical="true" android:layout_width="wrap_content" android:layout_height="wrap_content" />
-        <TextView android:id="@+id/runningDate" android:textStyle="italic" android:textColor="@color/drawer_black"  android:layout_width="wrap_content"
-                  android:layout_below="@id/runningDescription" android:layout_height="wrap_content" />
+    <LinearLayout android:layout_toRightOf="@+id/rowIcon"  android:layout_marginLeft="@dimen/eight"  android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true">
+        <TextView android:id="@+id/runningDate" android:textSize="@dimen/medium_text" android:textColor="@color/white_back" android:layout_centerVertical="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold"/>
+        <TextView android:id="@+id/runningDescription" android:textStyle="italic" android:textColor="@color/secondary_grey"  android:layout_width="wrap_content"
+                  android:layout_below="@id/runningDate" android:layout_height="wrap_content" />
     </LinearLayout>
 
     <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/intervalCount"
-              android:textColor="@color/drawer_black"
+              android:textColor="@color/secondary_grey"
               android:gravity="center_vertical"
               android:layout_centerVertical="true"
               android:layout_alignParentRight="true"
-              android:textSize="@dimen/medium_text"
+              android:textSize="@dimen/small_text"
               android:textStyle="bold"
-              android:layout_marginRight="@dimen/four"
+              android:layout_marginRight="@dimen/four_dp"
             />
 
 </RelativeLayout>
