--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -14,10 +14,10 @@
         <com.kostas.custom.NonSwipeableViewPager
                 android:id="@+id/pager"
                 android:layout_width="fill_parent"
-                android:layout_height="0dp"
+                android:layout_height="@dimen/zero"
                 android:layout_weight="1"/>
         <include android:layout_width="fill_parent"
-                 android:layout_height="@dimen/bottom_buttons_height"
+                 android:layout_height="@dimen/list_view_height"
                  layout="@layout/bottom_buttons"/>
     </LinearLayout>
     <!--<include layout="@layout/drawer"/>-->
