--- a/res/layout/zero_height_spinner_item.xml
+++ b/res/layout/zero_height_spinner_item.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="0dp"
+              android:layout_height="@dimen/zero"
         android:visibility="gone">
 
-    <TextView   android:id="@+id/planDescriptionSpinner" android:layout_width="wrap_content" android:layout_height="0dp" />
+    <TextView   android:id="@+id/planDescriptionSpinner" android:layout_width="wrap_content" android:layout_height="@dimen/zero" />
 
 
 
