--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,27 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="circle_grey">#c6c6c6</color>
-    <color name="disable_grey">#ffdedede</color>
-    <color name="drawer_grey">#282828</color>
-    <color name="death_grey">#666</color>
-    <color name="drawer_black">#333333</color>
-    <color name="drawer_highlight">#212121</color>
-    <color name="map_icon_border">#006778</color>
-    <color name="semitrans_white">#50ffffff</color>
+    <color name="primary_grey">#333333</color>
+    <color name="secondary_grey">#545454</color>
     <color name="semitrans_green">#90e6</color>
-    <color name="semitrans_vodafone_red">#55e60000</color>
     <color name="progresswheel_rim">#e9e9e9</color>
-    <color name="secondary_txt">#717171</color>
-    <color name="back_swipe">#f4f4f4</color>
-    <color name="logincheckbox_color">#666666</color>
     <color name="white_back">#f6f5f5</color>
-    <color name="dark_grey_button_selector_color">#666666</color>
-    <color name="pressed_background_stores">#00869e</color>
     <color name="interval_green">#2ecc71</color>
     <color name="interval_green_pressed">#27ae60</color>
     <color name="interval_red">#c0392b</color>
     <color name="interval_red_pressed">#e74c3c</color>
     <color name="interval_blue">#2980b9</color>
     <color name="interval_blue_pressed">#3498db</color>
-
 </resources>
