--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="zero">0dp</dimen>
     <dimen name="xxlarge_text">40sp</dimen>
-    <dimen name="progressBarText">16sp</dimen>
     <dimen name="xlarge_text">25sp</dimen>
     <dimen name="large_text">20sp</dimen>
     <dimen name="xmedium_text">18sp</dimen>
@@ -9,19 +9,13 @@
     <dimen name="small_text">12sp</dimen>
     <dimen name="xsmall_text">10sp</dimen>
     <dimen name="xxsmall_text">8sp</dimen>
-    <dimen name="four">4dp</dimen>
-    <dimen name="usage_icon">18dp</dimen>
-    <dimen name="usage_icon_mr">10dp</dimen>
     <dimen name="margin10">10dp</dimen>
     <dimen name="progressBarSize">150dp</dimen>
-    <dimen name="circular_image_size">70dp</dimen>
     <dimen name="twenty">20dp</dimen>
     <dimen name="eight">8dp</dimen>
-    <dimen name="radius_eight">4dp</dimen>
+    <dimen name="four_dp">4dp</dimen>
     <dimen name="standard_view_height">48dp</dimen>
     <dimen name="map_icon_size">100dp</dimen>
-
     <dimen name="list_view_height">64dp</dimen>
-    <dimen name="bottom_buttons_height">64dp</dimen>
-
+    <dimen name="circular_image_size">70dp</dimen>
 </resources>
