--- a/res/layout/frg_show_runs.xml
+++ b/res/layout/frg_show_runs.xml
@@ -1,22 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res/com.kostas.onlineHelp"
+        android:layout_width="fill_parent"
 
+        android:layout_height="fill_parent">
 
-    <ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
-                 xmlns:app="http://schemas.android.com/apk/res/com.kostas.onlineHelp"
+    <ViewFlipper
             android:id="@+id/viewFlipperRuns"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:background="@color/primary_grey"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/buttonNewRun"
             >
 
         <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
 
+            <LinearLayout android:layout_width="match_parent" android:id="@+id/runsInfo"
+                          android:layout_height="@dimen/standard_view_height">
+        <TextView android:layout_weight="1" android:id="@+id/runsCount" android:layout_width="@dimen/zero" android:layout_height="wrap_content"
+                 android:textColor="@color/white_back" android:textSize="@dimen/medium_text" android:gravity="center" android:layout_gravity="center"
+               />
+            <TextView  android:layout_weight="1" android:id="@+id/intervalsCount" android:layout_width="@dimen/zero" android:layout_height="wrap_content"
+                      android:textColor="@color/white_back" android:textSize="@dimen/medium_text" android:gravity="center" android:layout_gravity="center"
+                      />
+            <TextView android:layout_weight="1" android:id="@+id/metersCount" android:layout_width="@dimen/zero" android:layout_height="wrap_content"
+                      android:textColor="@color/white_back" android:textSize="@dimen/medium_text" android:gravity="center" android:layout_gravity="center"
+                   />
+            <TextView android:layout_weight="1" android:id="@+id/durationCount" android:layout_width="@dimen/zero" android:layout_height="wrap_content"
+                       android:textColor="@color/white_back" android:textSize="@dimen/medium_text" android:gravity="center" android:layout_gravity="center"
+                      />
+            </LinearLayout>
         <ExpandableListView
                 android:id="@+id/listExpRunning"
-                android:layout_alignParentTop="true"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_above="@+id/adViewInterval3"
+                android:layout_below="@+id/runsInfo"
                 android:groupIndicator="@drawable/group_indicator"
                 />
 
@@ -134,4 +152,17 @@
 
     </ViewFlipper>
 
+    <Button
+            android:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/margin10"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/standard_view_height"
+        android:text="@string/new_interval"
+        android:textStyle="bold"
+        android:textSize="@dimen/large_text"
+        android:textColor="@color/white_back"
+        android:background="@drawable/close_button_selector"
+        android:id="@+id/buttonNewRun"
+        />
 
+</RelativeLayout>
