--- a/res/layout/list_common_row.xml
+++ b/res/layout/list_common_row.xml
@@ -11,15 +11,15 @@
 
 
 
-    <LinearLayout android:layout_toRightOf="@+id/rowIcon"  android:layout_marginLeft="@dimen/eight"  android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true">
-        <TextView android:id="@+id/runningDate" android:textSize="@dimen/medium_text" android:textColor="@color/white_back" android:layout_centerVertical="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold"/>
-        <TextView android:id="@+id/runningDescription" android:textStyle="italic" android:textColor="@color/secondary_grey"  android:layout_width="wrap_content"
-                  android:layout_below="@id/runningDate" android:layout_height="wrap_content" />
-    </LinearLayout>
+    <!--<LinearLayout android:layout_toRightOf="@+id/rowIcon"  android:layout_marginLeft="@dimen/eight"  android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true">-->
+        <TextView android:layout_toRightOf="@+id/rowIcon"  android:layout_marginLeft="@dimen/eight" android:id="@+id/topText" android:textSize="@dimen/medium_text" android:textColor="@color/white_back"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold"/>
+        <TextView android:layout_toRightOf="@+id/rowIcon"  android:layout_marginLeft="@dimen/eight" android:id="@+id/bottomText" android:textStyle="italic" android:textColor="@color/secondary_grey"  android:layout_width="wrap_content"
+                  android:layout_below="@id/topText" android:layout_height="wrap_content" />
+    <!--</LinearLayout>-->
 
     <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:id="@+id/intervalCount"
+              android:id="@+id/rightText"
               android:textColor="@color/secondary_grey"
               android:gravity="center_vertical"
               android:layout_centerVertical="true"
