--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<android.support.v4.widget.DrawerLayout-->
-        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
-        <!--android:id="@+id/drawer_layout"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
+
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+        android:background="@color/primary_grey"
        >
 
         <com.kostas.custom.NonSwipeableViewPager
