--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -43,4 +43,13 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="buttonStyle">
+        <item name="android:layout_alignParentBottom">true</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white_back</item>
+        <item name="android:textSize">@dimen/large_text</item>
+        <item name="android:layout_height">@dimen/standard_view_height</item>
+        <item name="android:layout_width">match_parent</item>
+    </style>
+
 </resources>
