--- a/res/layout/frg_plans.xml
+++ b/res/layout/frg_plans.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res/com.kostas.onlineHelp"
               android:id="@+id/plansFlipper"
               android:orientation="vertical"
               android:layout_width="match_parent"
@@ -38,61 +37,10 @@
     <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
             android:layout_margin="@dimen/margin10">
 
-        <com.kostas.custom.NumberPickerKostas
-                android:layout_alignParentTop="true"
-                app:minValue="100"
-                app:maxValue="5000"
-                app:step="50"
-                app:textName="@string/distance"
-                android:layout_gravity="center_horizontal"
-                android:id="@+id/planIntervalDistancePicker"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_marginBottom="@dimen/eight"
-                android:layout_height="@dimen/standard_view_height">
-        </com.kostas.custom.NumberPickerKostas>
-
-        <com.kostas.custom.NumberPickerKostas
-                android:layout_below="@+id/planIntervalDistancePicker"
-                app:minValue="10"
-                app:maxValue="300"
-                app:step="5"
-                app:textName="@string/seconds"
-                android:layout_centerHorizontal="true"
-                android:id="@+id/planIntervalTimePicker"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_marginBottom="@dimen/eight"
-                android:layout_height="@dimen/standard_view_height">
-        </com.kostas.custom.NumberPickerKostas>
-
-        <com.kostas.custom.NumberPickerKostas
-                android:layout_marginBottom="@dimen/eight"
-                android:layout_below="@+id/planIntervalTimePicker"
-                app:minValue="10"
-                app:maxValue="120"
-                app:step="5"
-                app:textName="@string/start_rest_secs"
-                android:layout_centerHorizontal="true"
-                android:id="@+id/planIntervalStartRestPicker"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/standard_view_height">
-        </com.kostas.custom.NumberPickerKostas>
-
-        <com.kostas.custom.NumberPickerKostas
-                android:layout_marginBottom="@dimen/eight"
-                android:layout_below="@+id/planIntervalStartRestPicker"
-                app:minValue="0"
-                app:maxValue="99"
-                app:step="1"
-                app:textName="@string/rounds"
-                android:layout_centerHorizontal="true"
-                android:id="@+id/planIntervalRoundsPicker"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/standard_view_height">
-        </com.kostas.custom.NumberPickerKostas>
+        <include android:id="@+id/pickers"
+                android:layout_width="fill_parent"
+                 android:layout_height="wrap_content"
+                 layout="@layout/number_pickers"/>
 
         <EditText
                   android:textColorHint="@android:color/darker_gray"
@@ -101,7 +49,7 @@
                   android:textColor="@color/primary_grey"
                   android:background="@drawable/edit_text_back"
                   android:id="@+id/planNewDescription"
-                  android:layout_below="@+id/planIntervalRoundsPicker"
+                  android:layout_below="@+id/pickers"
                   android:paddingLeft="@dimen/eight"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/standard_view_height"
